--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,7 +9,6 @@ body {
 }
 /*Welcome*/
 .lorrydoc-welcome-container{
-  /* text-align: center; */
   background-image: url(images/lorry-purple.jpeg);
   padding: 5px;
   height: 125px;
@@ -19,25 +18,27 @@ body {
   top: 125px;
   background-color: #EEEFEF;
   width: 100%;
-  height: 50px;
+  /* height: 70px; */
   text-align: center;
   border-radius: 25px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  padding-top: 6px; 
 }
-.back{
-  position: relative;
-  /* top: 0; */
-  /* left: 10px; */
+
+  .back{
+  position: absolute;
+  top: 0;
+  left: 10px;
 }
 /*Selection div*/
-.select-description{
-  /* position: relative;
-  top: 50px; */
-}
+/* .select-description{
+} */
+
 .select-container{
   text-align: center;
   position: relative;
-  top: 20px;
+  top: 80px;
 }
 .select-container span{
   font-size: 25px;
@@ -49,17 +50,30 @@ body {
 
 /*Solution/Result div*/
 .selected-brand-div{
-  text-align: center;
+  text-align: left;
+  position: relative;
+  top: 60px;
   margin-top:20px;
   margin-bottom: 35px;
 }
+@media screen and (max-width: 400px) {
+  .selected-brand-div{
+    top: 100px;
+  }
+}
+
 .selected-brand-div span{
   font-size: 20px;
   font-style: oblique;
   font-weight: 900;
+  
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .selected-problem-div{
   margin-bottom: 35px;
+  text-align: left;
+  position: relative;
+  top: 40px;
 }
 .selected-problem-div span{
   font-size: 20px;
@@ -74,7 +88,7 @@ body {
   width: 60%;
   background: transparent;
   border: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(63, 63, 63);
   font-size: 20px;
   outline: none;
 }
@@ -118,4 +132,13 @@ body {
   border: none;
   right:0;
   top: 260px;
+}
+footer{
+  position: relative;
+  width: 100%;
+  height: 100px;
+  background-color: rgb(155, 155, 155);
+  padding: 15px;
+  font-size: smaller;
+  padding-left:5em;
 }
