--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,7 +4,7 @@ body {
 }
 /*Main div/Top div*/
 .lorrydoc-main{
-  background-color: D8E0E7;
+  background-color: #D8E0E7;
   height: 100%;
 }
 /*Welcome*/
