--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,41 +4,29 @@ body {
 }
 /*Main div/Top div*/
 .lorrydoc-main{
-  background-color: #D8E0E7;
+  background-color: orange;
   height: 100%;
 }
 /*Welcome*/
 .lorrydoc-welcome-container{
-  background-image: url(images/lorry-purple.jpeg);
-  padding: 5px;
-  height: 125px;
+  text-align: center;
+  background-color: grey;
+  height: 75px;
 }
 .lorrydoc-welcome-container h3{
-  position: relative;
-  top: 125px;
-  background-color: #EEEFEF;
-  width: 100%;
-  /* height: 70px; */
-  text-align: center;
-  border-radius: 25px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 40px;
-  padding-top: 6px; 
+  position: absolute;
+  top: 25px;
 }
-
-  .back{
+.back{
   position: absolute;
   top: 0;
   left: 10px;
 }
 /*Selection div*/
-/* .select-description{
-} */
-
+.select-description{
+}
 .select-container{
   text-align: center;
-  position: relative;
-  top: 80px;
 }
 .select-container span{
   font-size: 25px;
@@ -50,30 +38,17 @@ body {
 
 /*Solution/Result div*/
 .selected-brand-div{
-  text-align: left;
-  position: relative;
-  top: 60px;
+  text-align: center;
   margin-top:20px;
   margin-bottom: 35px;
 }
-@media screen and (max-width: 400px) {
-  .selected-brand-div{
-    top: 100px;
-  }
-}
-
 .selected-brand-div span{
   font-size: 20px;
   font-style: oblique;
   font-weight: 900;
-  
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .selected-problem-div{
   margin-bottom: 35px;
-  text-align: left;
-  position: relative;
-  top: 40px;
 }
 .selected-problem-div span{
   font-size: 20px;
@@ -88,7 +63,7 @@ body {
   width: 60%;
   background: transparent;
   border: none;
-  border-bottom: 1px solid rgb(63, 63, 63);
+  border-bottom: 1px solid black;
   font-size: 20px;
   outline: none;
 }
@@ -98,14 +73,13 @@ body {
   text-align: right;
   font-size: 20px;
 }
-.login-container input[type=submit] {
-    position: absolute;
-    width: 100px;
-    height: 25px;
-    background-color: lightgrey;
-    border: none;
-    right: 0;
-    /* top: 175px; */
+.login-container input[type=submit]{
+  position: absolute;
+  width: 100px;
+  background-color: lightgrey;
+  border: none;
+  right:0;
+  top: 175px;
 }
 
 /*Register*/
@@ -129,17 +103,8 @@ body {
 .register-container input[type=submit]{
   position: absolute;
   width: 100px;
+  height: 25px;
   background-color: lightgrey;
   border: none;
   right:0;
-  top: 260px;
-}
-footer{
-  position: relative;
-  width: 100%;
-  height: 100px;
-  background-color: rgb(155, 155, 155);
-  padding: 15px;
-  font-size: smaller;
-  padding-left:5em;
 }
