--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,29 +1,35 @@
 body {
   height: 100vh;
-  padding: 0;
+  padding: 0vw;
 }
 /*Main div/Top div*/
 .lorrydoc-main{
-  background-color: D8E0E7;
-  height: 100%;
+  background-color: #D8E0E7;
+  height: 86.5%;
 }
 /*Welcome*/
-.lorrydoc-welcome-container{
-  background-image: url(images/lorry-purple.jpeg);
-  padding: 5px;
-  height: 125px;
+/*.lorrydoc-welcome-container {
+    background-image: url(images/lorry-purple.jpeg);
+    padding: 5px;
+    height: 125px;
+    margin-left: 20vw;
+}*/
+#image_lorry {
+    background-image: url(images/lorry-purple.jpeg);
+    padding: 20vw;
+    margin-left: 0vw;
 }
 .lorrydoc-welcome-container h3{
   position: relative;
-  top: 125px;
+  top: 20px;
   background-color: #EEEFEF;
   width: 100%;
   /* height: 70px; */
-  text-align: center;
-  border-radius: 25px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 40px;
-  padding-top: 6px; 
+text-align: center;
+border-radius: 25px;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-size: 40px;
+padding-top: 6px; 
 }
 .back{
   position: absolute;
