--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,15 +11,13 @@ body {
 #image_lorry {
     background-image: url(images/lorry-purple.jpeg);
     padding: 20vw;
-    margin-left: 0vw;
+    margin: 0px;
     height: 70px;
 }
 .lorrydoc-welcome-container h3{
   position: relative;
-  /* top: 10px; */
   background-color: #EEEFEF;
   width: 100%;
-  /* height: 70px; */
 text-align: center;
 border-radius: 25px;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -31,6 +29,7 @@ padding-top: 6px;
   top: 0;
   left: 10px;
 }
+
 /*Selection div*/
 .select-description{
 }
@@ -64,6 +63,7 @@ padding-top: 6px;
   font-style: oblique;
   font-weight: 900;
 }
+
 /*Login*/
 .login-container{
   margin-top: 25px;
@@ -73,7 +73,7 @@ padding-top: 6px;
   width: 100px;
   background-color: lightgrey;
   border: none;
-  margin-right: 15px;
+  right: 0;
 }
 .login-container input[type=password],
 .login-container input[type=email]{
@@ -98,10 +98,8 @@ padding-top: 6px;
 .already-member-button {
   text-decoration: underline;
   font-size: smaller;
-
 }
 .register-container{
-  /* margin-top: 75px; */
   margin: 15px;
 }
 .register-container input[type=text],
