--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,37 +4,38 @@ body {
 }
 /*Main div/Top div*/
 .lorrydoc-main{
-  background-color: #D8E0E7;
+  background-color: #ffffff;
   height: 86.5%;
 }
 /*Welcome*/
 #image_lorry {
-    background-image: url(images/lorry-purple.jpeg);
-    padding: 20vw;
-    margin-left: 0vw;
+  background-image: url(images/lorry-purple.jpeg);
+  padding: 20vw;
+  margin: 0px;
+  height: 70px;
 }
 .lorrydoc-welcome-container h3{
   position: relative;
-  top: 20px;
   background-color: #EEEFEF;
   width: 100%;
-  /* height: 70px; */
-text-align: center;
-border-radius: 25px;
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-size: 40px;
-padding-top: 6px; 
+  text-align: center;
+  border-radius: 25px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  padding-top: 6px;
 }
 .back{
   position: absolute;
   top: 0;
   left: 10px;
 }
+
 /*Selection div*/
 .select-description{
 }
 .select-container{
   text-align: center;
+  top: 0;
 }
 .select-container span{
   font-size: 25px;
@@ -45,6 +46,29 @@ padding-top: 6px;
 }
 
 /*Solution/Result div*/
+.lorrydoc-solution-container{
+  text-align: center;
+}
+.lorrydoc-solution-container span::after {
+  content: "\A";
+  white-space: pre;
+}
+.lorrydoc-solution-container .selected-container{
+
+}
+.lorrydoc-solution-container .selected-desc-brand,
+.lorrydoc-solution-container .selected-desc-problem,
+.lorrydoc-solution-container .solution-desc-span{
+  font-size: 20px;
+  border-bottom: 1px solid black;
+}
+.lorrydoc-solution-container .selected-brand,
+.lorrydoc-solution-container .selected-problem,
+.lorrydoc-solution-container .solution-span{
+  font-size: 15px;
+}
+
+/*
 .selected-brand-div{
   text-align: center;
   margin-top:20px;
@@ -63,16 +87,22 @@ padding-top: 6px;
   font-style: oblique;
   font-weight: 900;
 }
+.selected-desc-brand::after,
+.selected-desc-problem::after {
+  content: "\A";
+  white-space: pre;
+}
+*/
 /*Login*/
 .login-container{
-  margin-top: 85px;
+  margin-top: 25px;
 }
 .login-container input[type=submit]{
   position: relative;
   width: 100px;
   background-color: lightgrey;
   border: none;
-  right:0px;
+  right: 0;
 }
 .login-container input[type=password],
 .login-container input[type=email]{
@@ -84,7 +114,7 @@ padding-top: 6px;
   border-bottom: 1px solid black;
   border-left: 1px solid black;
   font-size: 20px;
-  margin-top: 15px;
+  margin: 15px;
   outline: none;
   right: 0;
 }
@@ -97,11 +127,9 @@ padding-top: 6px;
 .already-member-button {
   text-decoration: underline;
   font-size: smaller;
-
 }
 .register-container{
-  margin-top: 75px;
-  margin-left: 15px;
+  margin: 15px;
 }
 .register-container input[type=text],
 .register-container input[type=password],
@@ -114,7 +142,7 @@ padding-top: 6px;
   border-bottom: 1px solid black;
   border-left: 1px solid black;
   font-size: 20px;
-  margin-top: 15px;
+  margin: 15px 15px 0px 15px;
   outline: none;
   right: 0;
 }
@@ -123,8 +151,11 @@ padding-top: 6px;
   width: 100px;
   background-color: lightgrey;
   border: none;
-  right:0;
-  left: 130px;
+  /* right: 0px; */
+  left: 110px;
+  /* margin-right: 15px;*/
+  margin-top: 15px;
+
 }
 
 .reg-icon{
@@ -137,4 +168,5 @@ footer {
   text-align: justify;
   color: rgba(65, 62, 62, 0.753);
   padding: 20px;
+  font-size: smaller;
 }
