--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,7 +21,7 @@ body {
   text-align: center;
   border-radius: 25px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 40px;
+  font-size: 35px;
   padding-top: 6px;
 }
 .back{
@@ -99,6 +99,7 @@ body {
 }
 .login-container input[type=submit]{
   position: relative;
+  margin-right: 10vw;
   width: 100px;
   background-color: lightgrey;
   border: none;
