--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,20 +9,23 @@ body {
 }
 /*Welcome*/
 #image_lorry {
-  background-image: url(images/lorry-purple.jpeg);
-  padding: 20vw;
-  margin: 0px;
-  height: 70px;
+    background-image: url(images/lorry-purple.jpeg);
+    padding: 20vw;
+    margin: 0px;
+    margin-right: 5px;
+    height: 70px;
 }
-.lorrydoc-welcome-container h3{
-  position: relative;
-  background-color: #EEEFEF;
-  width: 100%;
-  text-align: center;
-  border-radius: 25px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 35px;
-  padding-top: 6px;
+.lorrydoc-welcome-container h3 {
+    position: relative;
+    /*background-color: #EEEFEF; */
+    background-color: lightgray;
+    width: 100%;
+    text-align: center;
+    border-radius: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /*font-size: 35px;*/
+    font-size: 7vw;
+    padding-top: 6px;
 }
 .back{
   position: absolute;
@@ -170,4 +173,42 @@ footer {
   color: rgba(65, 62, 62, 0.753);
   padding: 20px;
   font-size: smaller;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Full height centered app container */
+#app-container {
+    /* Set block height using the viewport height unit, and force it to be full height, even if the containing content does not require it */
+    min-height: 87vh;
+    /* center this block for larger viewports */
+    margin: 0 auto;
+    /*Use max-width for better browser handling of small windows
+  http://www.w3schools.com/css/css_max-width.asp
+  */
+    max-width: 31.25em;
+    /* Use min-width to prevent your design from being scrunched up in tiny viewports (and instead be replaced with horizontal scroll bars) 
+  */
+    min-width: 18.75em;
+    /* Add padding around your content - this is just an arbitrary number */
+    padding: 0em;
+    /* Add sufficient top padding so the fixed header doesn't cover up main content by defailt.  This value should be a calculated value (eg using calc(), sass, etc):
+  padding for this container + height of app header; Here, that is 1em + 4em */
+    padding-top: 0em;
+    /* just used to so we can tell the content block apart from the body block */
+    background-color: transparent;
 }
