--- a/public/css/index.css
+++ b/public/css/index.css
@@ -170,11 +170,21 @@ body {
 
 footer {
   background-color: lightgrey;
-  height: 100px;
+  height: 27vh;
   text-align: justify;
   color: rgba(65, 62, 62, 0.753);
   padding: 20px;
   font-size: smaller;
+}
+#page-cont {
+    border: solid unset;
+}
+#forum-cont {
+    border: solid unset;
+}
+#support {
+    margin-top: 2vh;
+    color: black;
 }
 
 
